--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,9 @@
           <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ '/']" >Home</a>
           </li>
+          <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="[ 'friends']" >Friends</a>
+          </li>
         </ul>
       </div>
         <ul class="nav navbar-nav navbar-right">
