--- a/angular-app/src/app/components/friends/friends.component.html
+++ b/angular-app/src/app/components/friends/friends.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center">
+<div class="container text-center">
   <div class="row content">
     <div class="col-sm-1 sidenav">
     </div>
@@ -22,11 +22,9 @@
         </div> -->
 
         <div *ngFor="let user of users">
-          <!-- <ng-container *ngIf="post.comments.length"> -->
-          <!-- <h1>{{user.name}}'s Posts</h1> -->
-
+         <br>
           <div>
-            <h1 *ngIf="showuser">{{user.name}}</h1>
+            <h1 *ngIf="checkUser(user.email)">{{user.name}}</h1>
             <div class="container">
               <div *ngFor="let post of posts">
                 <div *ngIf="post.userId==user.email && post.post !=''">
@@ -36,14 +34,14 @@
                       <p class="commentUser">{{comment.user}}:</p>
                       <p class="comment">{{comment.content}}</p>
                     </div>
+                    <textarea #commentvar class="form-control" rows="1"></textarea>
+                    <small class="text-danger" #commentvalid hidden>comment should not be empty</small>
+                    <button class="btn btn-primary btn-sm float-right" (click)="postComment(commentvalid,commentvar.value,post._id)">comment</button>
                   </div>
-                  <textarea #comment class="form-control" rows="1"></textarea>
-                  <button class="btn btn-primary btn-sm float-right" (click)="postComment(comment,user.email)">comment</button>
                 </div>
               </div>
             </div>
           </div>
-          <hr class="my-3">
         <!-- </ng-container> -->
         </div>
       </div>
