--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link" [routerLink]="[ '/']" >Home</a>
           </li>
           <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-            <a class="nav-link" [routerLink]="[ 'friends']" >Friends</a>
+            <a class="nav-link" [routerLink]="[ 'friends']" >community</a>
           </li>
         </ul>
       </div>
