--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -6,15 +6,27 @@
   
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav navbar-left">
-          <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+          <li *ngIf="!checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ '/']" >Home</a>
           </li>
-          <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+
+          <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="[ 'posts']" >Profile</a>
+          </li>
+          
+          <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ 'friends']" >community</a>
           </li>
         </ul>
-      </div>
+</div>
         <ul class="nav navbar-nav navbar-right">
+          <li *ngIf="checkUser()"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="[ 'login']" (click)="clearItem()" >Signout</a>
+          </li>
+        </ul>
+
+
+        <!-- <ul class="nav navbar-nav navbar-right"> -->
             <!-- <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" >
                 <a class="nav-link" [routerLink]="[ '/dashboard']">Dashboard</a>
               </li>
@@ -30,7 +42,7 @@
               <li *ngIf="authService.loggedIn()">
                   <a class="nav-link" href="#" (click)="onLogoutClick()" >Logout</a>
               </li> -->
-        </ul>
+        <!-- </ul> -->
      
       </div>
     </nav>
