--- a/angular-app/src/app/components/home/home.component.html
+++ b/angular-app/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="jumbotron container">
-    <h1 class="display-5">login to post</h1>
-    <p class="lead">post your opinions to the community and react to other peoples posts</p>
+    <h1 class="display-5">Login to share</h1>
+    <p class="lead">Share your ideas and experiences to the world</p>
     <hr class="my-4">
-    <p class="lead"> please login to proceed</p>
+    <p class="lead"> Please login to proceed</p>
     <p class="lead"></p>
     <button class="btn btn-primary" [routerLink]="['/login']">login</button>
     </div>
