--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <div class="container">
      <div class="navbar-header">
-      <a class="navbar-brand" href="#">Post to the community</a>
+      <a class="navbar-brand" href="#">Share your thoughts</a>
     </div>
-  
+
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav navbar-left">
           <li *ngIf="!checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
@@ -13,7 +13,7 @@
           <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ 'posts']" >Profile</a>
           </li>
-          
+
           <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ 'friends']" >community</a>
           </li>
@@ -43,6 +43,6 @@
                   <a class="nav-link" href="#" (click)="onLogoutClick()" >Logout</a>
               </li> -->
         <!-- </ul> -->
-     
+
       </div>
     </nav>
