--- a/angular-app/src/app/components/posts/posts.component.html
+++ b/angular-app/src/app/components/posts/posts.component.html
@@ -6,7 +6,7 @@
       <div>
         <form>
           <div class="form-group">
-            <p>post here</p>
+            <p>create new</p>
             <textarea #newpostarea type="text" class="form-control"></textarea>
             <small #postalert class="text-danger" hidden>please enter something to post</small>
           </div>
@@ -14,7 +14,7 @@
         </form>
       </div>
       <div>
-      
+
         <!-- <div *ngFor="let post of posts">{{post.post}}
           <div *ngFor="let comment of post.comments">{{comment}}</div>
 
