added tabs in profile page

--- a/angular-app/src/app/components/login/login.component.html
+++ b/angular-app/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
         or
       </tr>
       <tr>
-        <button class="badge badge-success badge-round" [routerLink]="['/register']">Register</button>
+        <a class="badge badge-success badge-round badge-sm" [routerLink]="[ '/register']" >Register</a>
       </tr>
 
       </table>
