--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
     <div class="container">
      <div class="navbar-header">
-      <a class="navbar-brand" href="#">Share your thoughts</a>
+      <a class="navbar-brand btn disabled" href="">Share your knowledge</a>
     </div>
 
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav navbar-left">
           <li *ngIf="!checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
             <a class="nav-link" [routerLink]="[ '/']" >Home</a>
+          </li>
+          <li *ngIf="!checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="[ '/login']" >Login</a>
           </li>
 
           <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
