--- a/angular-app/src/app/components/posts/posts.component.html
+++ b/angular-app/src/app/components/posts/posts.component.html
@@ -2,44 +2,73 @@
   <div class="row content">
     <div class="col-sm-1 sidenav">
     </div>
+
+
+
     <div class="col-sm-9 text-left jumbotron">
-      <div>
-        <form>
-          <div class="form-group">
-            <p>create new</p>
-            <textarea #newpostarea type="text" class="form-control"></textarea>
-            <small #postalert class="text-danger" hidden>please enter something to post</small>
-          </div>
-          <div class="form-group"><button class="btn btn-primary float-right" (click)="newpost(newpostarea.value,postalert);newpostarea.value='';">post</button></div>
-        </form>
-      </div>
-      <div>
 
-        <!-- <div *ngFor="let post of posts">{{post.post}}
-          <div *ngFor="let comment of post.comments">{{comment}}</div>
 
-        </div> -->
-        <div *ngFor="let post of posts">
-          <!-- <ng-container *ngIf="post.comments.length"> -->
-          <!-- <h1>{{user.name}}'s Posts</h1> -->
+      <nav>
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <a class="nav-item nav-link" id="nav-new-tab" data-toggle="tab" href="#nav-new" role="tab" aria-controls="nav-new" aria-selected="false">New</a>
+          <a class="nav-item nav-link active" id="nav-article-tab" data-toggle="tab" href="#nav-articles" role="tab" aria-controls="nav-articles" aria-selected="true">My Articles</a>
+        </div>
+      </nav>
+      <div class="tab-content jumbotron" id="nav-tabContent">
+        <div class="tab-pane fade" id="nav-new" role="tabpanel" aria-labelledby="nav-new-tab">
+          <div>
+            <form #postForm="ngForm">
 
-          <div class="container">
-            <p class="lead">{{post.post}}</p>
-            <div *ngFor="let comment of post.comments" class="container">
-              <div>
-                <p class="commentUser">{{comment.user}}:</p>
-                <p class="comment">{{comment.content}}</p>
+              <div class="form-group">
+                <textarea #posttitle type="text" class="form-control form-control-sm" rows="1" placeholder="Title"></textarea>
+                <small #postalert class="text-danger" hidden>please enter something to post</small>
               </div>
-            </div>
-            <textarea #commentvar class="form-control" rows="1"></textarea>
-            <small class="text-danger" #commentvalid hidden>comment should not be empty</small>
-            <button class="btn btn-primary btn-sm float-right" (click)="postComment(commentvalid,commentvar.value,post._id)">comment</button>
+
+              <div class="form-group">
+                <textarea #newpostarea type="text" class="form-control" placeholder="Content"></textarea>
+                <small #postalert class="text-danger" hidden>please enter something to post</small>
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary float-right" (click)="postForm.form.reset();">post</button>
+              </div>
+
+            </form>
           </div>
-        <!-- </ng-container> -->
-        <br>
+        </div>
+
+        <div class="tab-pane fade" id="nav-articles" role="tabpanel" aria-labelledby="nav-articles-tab">
+          <div>
+            <div *ngFor="let post of posts">
+              <!-- <ng-container *ngIf="post.comments.length"> -->
+              <!-- <h1>{{user.name}}'s Posts</h1> -->
+
+              <div class="container">
+                <p class="lead">{{post.post}}</p>
+                <div *ngFor="let comment of post.comments" class="container">
+                  <div>
+                    <p class="commentUser">{{comment.user}}:</p>
+                    <p class="comment">{{comment.content}}</p>
+                  </div>
+                </div>
+                <textarea #commentvar class="form-control" rows="1"></textarea>
+                <small class="text-danger" #commentvalid hidden>comment should not be empty</small>
+                <button class="btn btn-primary btn-sm float-right" (click)="postComment(commentvalid,commentvar.value,post._id)">comment</button>
+              </div>
+            <!-- </ng-container> -->
+            <br>
+            </div>
+          </div>
         </div>
       </div>
+
+
+
     </div>
+
+
+
+
+
     <div class="col-sm-1 sidenav">
     </div>
   </div>
