--- a/angular-app/src/app/components/navbar/navbar.component.html
+++ b/angular-app/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           </li>
 
           <li *ngIf="checkUser()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}">
-            <a class="nav-link" [routerLink]="[ 'friends']" >community</a>
+            <a class="nav-link" [routerLink]="[ 'friends']" >Browse</a>
           </li>
         </ul>
 </div>
