--- a/angular-app/src/app/components/register/register.component.html
+++ b/angular-app/src/app/components/register/register.component.html
@@ -1,27 +1,31 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div style="text-align:center">
+  <flash-messages></flash-messages>
     <div class="jumbotron container">
-      <form (submit)="registerUser()">
+      <form (submit)="registerUser()" #registerForm="ngForm">
 
         <table align="center">
   <tr>
         <div class="form-group">
-         <input type="text" class="form-control" [(ngModel)]="name" placeholder="Name" name="name">
+         <input type="text" #nameref="ngModel" [class.is-invalid]="nameref.invalid && nameref.touched" class="form-control" [(ngModel)]="name" placeholder="Name" name="name" required>
+         <small class="text-danger" [class.d-none]="nameref.valid || nameref.untouched">Name is required</small>
         </div>
       </tr>
       <tr>
             <div class="form-group">
-             <input type="text" class="form-control" [(ngModel)]="username" placeholder="email" name="username">
+             <input type="text" #usernameref="ngModel" [class.is-invalid]="usernameref.invalid && usernameref.touched" class="form-control" [(ngModel)]="username" placeholder="email" name="username" required pattern="^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$">
+             <small class="text-danger" [class.d-none]="usernameref.valid || usernameref.untouched">Invalid email</small>
             </div>
           </tr>
       <tr>
           <div class="form-group">
-          <input type="password" class="form-control" [(ngModel)]="password" placeholder="Password" name="password">
+          <input type="password" #passwordref="ngModel" [class.is-invalid]="passwordref.invalid && passwordref.touched" class="form-control" [(ngModel)]="password" placeholder="Password" name="password" required>
+          <small class="text-danger" [class.d-none]="passwordref.valid || passwordref.untouched">Password is required</small>
         </div>
       </tr>
       <tr>
-        <input type="submit" value="Register" class='btn btn-primary btn-block'>
+        <input type="submit" value="Register" class='btn btn-primary btn-block' [disabled]="registerForm.invalid">
       </tr>
 
       </table>
