--- a/angular-app/src/app/components/posts/post-details/post-details.component.html
+++ b/angular-app/src/app/components/posts/post-details/post-details.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center ">
   <div class="row content">
     <div class="col-sm-1 sidenav">
     </div>
@@ -10,13 +10,19 @@
       <p>{{post.post}}</p>
       <div class="container border bg-light rounded p-4">
         <div *ngFor="let comment of post.comments">
-            <strong>{{comment.user}}: </strong>
-            <small>{{comment.content}}</small>
+          <div class="container rounded ">
+            <strong>{{comment.user}}:</strong><br>
+            <small>  {{comment.content}}</small>
+            <br>
+          </div>
         </div>
+        <br>
         <textarea #commentref="ngModel" [(ngModel)]="comment" name="commentname" [class.is-invalid]="commentref.invalid && commentref.touched" type="text" class="form-control form-control-sm" placeholder="type you comment here" rows="3" required></textarea>
         <!-- <small class="text-danger" #commentvalid hidden>comment should not be empty</small> -->
-        <button class="btn btn-primary badge btn-sm" (click)="postComment(post._id);" [disabled]="commentref.invalid">comment</button>
-        <small  class="text-danger float-right" [class.d-none]= "commentref.valid || commentref.untouched">Please enter something to comment</small>
+        <button class="btn btn-primary badge btn-sm" (click)="postComment(post._id)" [disabled]="commentref.invalid">comment</button>
+        <!--  -->
+        <small #commentvalidref class="text-danger float-right" hidden>Please enter something</small>
+        <small class="text-danger float-right" [class.d-none]= "commentref.valid || commentref.untouched">Please enter something to comment</small>
       </div>
       <!-- </ng-container> -->
     </div>
