--- a/angular-app/src/app/components/register/register.component.html
+++ b/angular-app/src/app/components/register/register.component.html
@@ -3,7 +3,7 @@
 <div style="text-align:center">
   <flash-messages></flash-messages>
     <div class="jumbotron container">
-      <form (submit)="registerUser()" #registerForm="ngForm">
+      <form #registerForm="ngForm" (submit)="registerUser()">
 
         <table align="center">
   <tr>
@@ -14,13 +14,13 @@
       </tr>
       <tr>
             <div class="form-group">
-             <input type="text" #usernameref="ngModel" [class.is-invalid]="usernameref.invalid && usernameref.touched" class="form-control" [(ngModel)]="username" placeholder="email" name="username" required pattern="^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$">
+             <input #usernameref="ngModel" type="text"  [class.is-invalid]="usernameref.invalid && usernameref.touched" class="form-control" [(ngModel)]="username" placeholder="email" name="username" required pattern="^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,6}(?:\.[a-z]{2})?)$">
              <small class="text-danger" [class.d-none]="usernameref.valid || usernameref.untouched">Invalid email</small>
             </div>
           </tr>
       <tr>
           <div class="form-group">
-          <input type="password" #passwordref="ngModel" [class.is-invalid]="passwordref.invalid && passwordref.touched" class="form-control" [(ngModel)]="password" placeholder="Password" name="password" required>
+          <input #passwordref="ngModel" type="password" [class.is-invalid]="passwordref.invalid && passwordref.touched" class="form-control" [(ngModel)]="password" placeholder="Password" name="password" required>
           <small class="text-danger" [class.d-none]="passwordref.valid || passwordref.untouched">Password is required</small>
         </div>
       </tr>
