--- a/angular-app/src/app/components/posts/post-details/post-details.component.html
+++ b/angular-app/src/app/components/posts/post-details/post-details.component.html
@@ -6,6 +6,7 @@
 
       <br>
       <p class="lead">{{post.title}}</p>
+      <small>By : {{post.user}}</small>
       <hr class="my-4">
       <p>{{post.post}}</p>
       <div class="container border bg-light rounded p-4">
